# chat-pdf

./: app.py  constants.py  langchain_utils.py  pyproject.toml  search_indexing.py
templates/: index.html  results.html
